--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -15,9 +15,9 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="textarea-text">
-                            <span class="title"><a href="{{ attach_file.url }}"></a>متن سوال</span>
+                            <span class="title"><a href="{{ attachment.url }}"></a>متن سوال</span>
                             <div class="body">
-                                {{ question }}
+                                {{ question }}                                
                             </div>
                         </div>
                     </div>
@@ -27,9 +27,9 @@
                         <div class="question-attach text-left">
                             <ul class="inline-list">
                                 <li class="list-item">
-                                    <a href="{{ attach_file.url }}" class="attach-file">
+                                    <a href="{{ attachment.url }}" class="attach-file">
                                         <span class="doc-file"></span>
-                                        <span>fileName</span>
+                                        <span>{{file_name}}</span>
                                     </a>
                                 </li>
                                 <!-- <li class="list-item">
