--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -33,14 +33,14 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="card project-item">
-                                            {% if forloop.counter0 == 0 %}
-                                                <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>
-                                            {% endif %}
+{#                                            {% if forloop.counter0 == 0 %}#}
+{#                                                <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>#}
+{#                                            {% endif %}#}
                                             <span class="header">{{ p.project_form.project_title_persian }} <span
                                                     class="sub-header"> ( {% calculate_date_past p.date_submitted_by_industry %} قبل ) </span></span>
                                             <span><i class="far fa-envelope"></i> پیام ها </span>
                                             <span><i
-                                                    class="fas fa-dollar-sign"></i><span>{{ p.cost_of_project }}</span> ریال </span>
+                                                    class="fas fa-dollar-sign"></i><span>{{ p.project_form.required_budget }}</span> ریال </span>
                                             <span><i
                                                     class="fas fa-hourglass-end"></i><span>{% calculate_date_remaining p.date_finished %}</span> تا اتمام پروژه</span>
                                             <button type="button" class="chamran-btn-info" id="{{ p.id }}"
