--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -153,7 +153,8 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <label for="id_key_words">کلیدواژه ها</label>
-                                <input type="text" id="id_key_words" class="w-100">
+                                {{ expert_info_form.keywords|attr:"id:id_key_words"|attr:"class:w-100" }}
+{#                                <input type="text" name="keywords" id="id_key_words" class="w-100">#}
                             </div>
                         </div>
                     </div>
