--- a/industry/static/industry/css/comments.css
+++ b/industry/static/industry/css/comments.css
@@ -1,287 +1,197 @@
-.comment-tabs {
-    position: relative;
-    -webkit-box-shadow: 0 6px 4px -5px rgba(0, 0, 0, 0.16);
-    -moz-box-shadow: 0 6px 4px -5px rgba(0, 0, 0, 0.16);
-    box-shadow: 0 6px 4px -5px rgba(0, 0, 0, 0.16);
+.new-comment-tools{
+  color: #707070;
+  position: absolute;
+  bottom: 10px;
+  right: 25px;
 }
-
-.comment-tabs .nav-pills .nav-link img {
-    width: 45px;
-    height: 45px;
+.new-comment-tools > i{
+  margin:0;
 }
-
-.comment-tabs .nav-pills > .nav-link.active {
-    border: none;
-}
-
-.comment-tabs .nav-pills > .nav-link.active img {
-    -webkit-box-shadow: -2px 3px 10px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: -2px 3px 10px rgba(0, 0, 0, 0.3);
-    box-shadow: -2px 3px 10px rgba(0, 0, 0, 0.3);
-}
-
-.new-comment-tools {
-    color: #707070;
-    position: absolute;
-    bottom: 10px;
-    right: 25px;
-}
-
-.new-comment-tools > i {
-    margin: 0;
-}
-
 .comment-profile > img {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
 }
-
-.project-comment-innerDiv {
-    background-repeat: repeat;
-    background-image: url('../img/comment_pattern.png');
-    background-size: contain;
+.comment-body{
+  width: 75%;
+  position: relative;
+  padding: 5px;
+  text-align: right;
+  text-align: -webkit-right;
+  text-align: -moz-right;
+  height: 100%;
+  min-height: 50px;
+  border-radius: 0.25em;
+  border: 1px solid #bdbdbd;
+  background-color: #ffffff;
 }
-
-.comment-body {
-    width: 75%;
-    position: relative;
-    padding: 5px;
-    text-align: right;
-    text-align: -webkit-right;
-    text-align: -moz-right;
-    height: 100%;
-    min-height: 50px;
-    border-radius: 0.25em;
-    border: 1px solid #bdbdbd;
-    background-color: #ffffff;
+.comment-body:hover{
+  cursor: default;
 }
-
-.comment-body:hover {
-    cursor: default;
+.my-comment , .your-comment {
+  position: relative;
+  margin: 10px auto;
 }
-
-.my-comment, .your-comment, .admin-comment {
-    position: relative;
-    margin: 10px auto;
+.my-comment{
+  padding-right: 70px;
 }
-
-.admin-comment .comment-body {
-    background-color: #f8fdf7;
-    width: fit-content;
-    padding: 5px 10px;
-    font-size: 11px;
-    min-height: 0;
-    margin: 0 auto;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-}
-
 .my-comment > .comment-profile {
-    position: absolute;
-    right: 0;
-    bottom: 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
-
 .my-comment > .comment-body {
-    border-bottom-right-radius: 0;
-    left: 0;
-    background-color: rgba(231, 255, 226, 1);
+  border-bottom-right-radius: 0;
 }
-
-.my-comment > .comment-body:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: -10px;
-    height: 10px;
-    width: 10px;
-    border-bottom-left-radius: 1.25em;
-    background-color: #fff;
-    border-left: 1px solid #bdbdbd;
-    border-bottom: 1px solid #bdbdbd;
+.my-comment > .comment-body:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: -10px;
+  height: 10px;
+  width: 10px;
+  border-bottom-left-radius: 1.25em;
+  background-color: #f8fdf7;
+  border-left: 1px solid #bdbdbd;
+  border-bottom: 1px solid #bdbdbd;
 }
-
-.my-comment > .comment-body:before {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    right: -10px;
-    height: 10px;
-    width: 10px;
-    background-color: rgba(231, 255, 226, 1);
-    border-bottom: 1px solid #bdbdbd;
+.my-comment > .comment-body:before{
+  content: '';
+  position:absolute;
+  bottom: -1px;
+  right: -10px;
+  height: 10px;
+  width: 10px;
+  background-color: #f8fdf7;
+  border-bottom: 1px solid #bdbdbd;
 }
-
-.comments {
-    padding: 10px;
-    -webkit-box-shadow: inset 0px -3px 4px -2px rgba(0,0,0,0.16);
-    -moz-box-shadow: inset 0px -3px 4px -2px rgba(0,0,0,0.16);
-    box-shadow: inset 0px -3px 4px -2px rgba(0,0,0,0.16);
+.fa-paperclip, .fa-pen, .fa-trash-alt, .fa-reply, .fa-smile{
+  border: 1px solid transparent;
+  padding: 6px;
+  background-color: transparent;
+  border-radius: 3px;
 }
-
-.comments > div:first-child {
-    margin: 0;
+.fa-paperclip:hover, .fa-pen:hover, .fa-trash-alt:hover, .fa-reply:hover, .fa-smile:hover{
+  cursor: pointer;
+  color: #3ccd1c;
+  border: 1px solid #3ccd1c;
+  padding: 6px;
+  background-color: transparent;
+  border-radius: 3px;
 }
-
-.fa-paperclip, .fa-pen, .fa-trash-alt, .fa-reply, .fa-smile {
-    border: 1px solid transparent;
-    padding: 6px;
-    background-color: transparent;
-    border-radius: 3px;
+label[for=comment-attach]{
+  top: -25px;
+  right: 0;
 }
-
-.fa-paperclip:hover, .fa-pen:hover, .fa-trash-alt:hover, .fa-reply:hover, .fa-smile:hover {
-    cursor: pointer;
-    color: #3ccd1c;
-    border: 1px solid #3ccd1c;
-    padding: 6px;
-    background-color: transparent;
-    border-radius: 3px;
+#comment{
+  padding-bottom: 30px;
 }
-
-label[for=comment-attach] {
-    top: -25px;
-    right: 0;
+.replay-div{
+  position: absolute;
+  top: 21px;
+  left: 16px;
+  height: 30px;
+  width: calc(100% - 31px);
+  border-radius: 5px 5px 0 0;
+  color: #707070;
+  overflow: hidden;
+  padding: 5px 5px 5px 20px;
+  background-color: #f8fdf7;
+  border-right: 2px solid #3ccd1c;
 }
-
-#comment {
-    padding-bottom: 30px;
+.replay-div:hover{
+  cursor: default;
 }
-
-.replay-div {
-    position: absolute;
-    top: 21px;
-    left: 16px;
-    height: 30px;
-    width: calc(100% - 31px);
-    border-radius: 5px 5px 0 0;
-    color: #707070;
-    overflow: hidden;
-    padding: 5px 5px 5px 20px;
-    background-color: #f8fdf7;
-    border-right: 2px solid #3ccd1c;
+.replay-div > .fa-reply{
+  padding: 0;
+  border: none;
+  margin-left: 10px;
+  border-radius: 0;
 }
-
-.replay-div:hover {
-    cursor: default;
+.replay-div > .fa-reply:hover{
+  cursor: default;
+  color: #707070;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  border-radius: 0;
 }
-
-.replay-div > .fa-reply {
-    padding: 0;
-    border: none;
-    margin-left: 10px;
-    border-radius: 0;
+.replay-div > .fa-times{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
 }
-
-.replay-div > .fa-reply:hover {
-    cursor: default;
-    color: #707070;
-    border: none;
-    padding: 0;
-    background-color: transparent;
-    border-radius: 0;
+.replay-div > .fa-times:hover{
+  cursor: pointer;
+  color: #ff4545;
 }
-
-.replay-div > .fa-times {
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
+.attach{
+  position: absolute;
+  left: 15px;
+  height: 30px;
+  width: calc(100% - 30px);
+  border-radius: 5px 5px 0 0;
+  color: #707070;
+  overflow: hidden;
+  padding: 5px 5px 5px 20px;
 }
-
-.replay-div > .fa-times:hover {
-    cursor: pointer;
-    color: #ff4545;
-}
-
-.attach {
-    position: absolute;
-    left: 15px;
-    height: 30px;
-    width: calc(100% - 30px);
-    border-radius: 5px 5px 0 0;
-    color: #707070;
-    overflow: hidden;
-    padding: 5px 5px 5px 20px;
-}
-
 .attach > .progress {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(0%, -50%);
 }
-
-.my-comment > .comment-body > .comment-tools {
-    color: #707070;
-    position: absolute;
-    bottom: 5px;
-    left: 5px;
+.my-comment > .comment-body > .comment-tools{
+  color: #707070;
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
 }
-
-.comment-tools > i {
-    margin: 0;
+.comment-tools > i{
+  margin:0;
 }
-
 .your-comment {
-    padding-left: 60px;
-    text-align: left;
-    text-align: -webkit-left;
-    text-align: -moz-left;
+  padding-left: 70px;
+  padding-right: 20px;
+  text-align: left;
+  text-align: -webkit-left;
+  text-align: -moz-left;
 }
-
 .your-comment > .comment-profile {
-    position: absolute;
-    left: 0;
-    bottom: 0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
-
 .your-comment > .comment-body {
     border-bottom-left-radius: 0;
 }
-
-.your-comment > .comment-body:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: -10px;
-    height: 10px;
-    width: 10px;
-    border-bottom-right-radius: 1.25em;
-    background-color: #f8fdf7;
-    border-right: 1px solid #bdbdbd;
-    border-bottom: 1px solid #bdbdbd;
+.your-comment > .comment-body:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -10px;
+  height: 10px;
+  width: 10px;
+  border-bottom-right-radius: 1.25em;
+  background-color: #f8fdf7;
+  border-right: 1px solid #bdbdbd;
+  border-bottom: 1px solid #bdbdbd;
 }
-
-.your-comment > .comment-body:before {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: -10px;
-    height: 10px;
-    width: 10px;
-    background-color: #f8fdf7;
-    border-bottom: 1px solid #bdbdbd;
+.your-comment > .comment-body:before{
+  content: '';
+  position:absolute;
+  bottom: -1px;
+  left: -10px;
+  height: 10px;
+  width: 10px;
+  background-color: #f8fdf7;
+  border-bottom: 1px solid #bdbdbd;
 }
-
-.your-comment > .comment-body > .comment-tools {
-    color: #707070;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: -30px;
-}
-
-.multi-user-comment {
-    display: flex;
-}
-
-.multi-user-comment .h-scroll-list {
-    display: flex;
-}
-
-.multi-user-comment .comment-body {
-    display: flex;
+.your-comment > .comment-body > .comment-tools{
+  color: #707070;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -30px;
 }
