--- a/industry/static/industry/css/style.css
+++ b/industry/static/industry/css/style.css
@@ -169,6 +169,7 @@ hr {
 .establish-time, .time-left {
     width: fit-content;
     position: absolute;
+    top: -20px;
 }
 
 .establish-time {
@@ -180,26 +181,22 @@ hr {
 }
 
 .establish-time > .time-head, .time-left > .time-head {
-    color: #3ccd1c;
-    background-color: transparent;
-    border: none;
-    font-size: 12px;
-    font-weight: 500;
+    background-color: #3CCD1C;
+    color: #fff;
+    border-top-left-radius: 0.25em;
+    border-top-right-radius: 0.25em;
+    border: 1px solid #bdbdbd;
+    border-bottom: none;
+    padding: 0 5px;
     text-align: center;
-    position: absolute;
-    top: -10px;
-    right: 10px;
 }
 
 .establish-time > .time-body, .time-left > .time-body {
     background-color: #F8FDF7;
     color: #707070;
-    border: none;
-    padding: 5px 40px 5px 10px;
-    text-align: left;
-    -webkit-border-radius: 0.5em;
-    -moz-border-radius: 0.5em;
-    border-radius: 0.5em;
+    border: 1px solid #bdbdbd;
+    padding: 0 5px;
+    text-align: center;
 }
 
 .custom-border-title {
@@ -234,49 +231,74 @@ span.title-back {
 }
 
 .project-info-innerDiv {
-    background-color: #fff;
+    padding-right: 44px;
     position: relative;
 }
 
 .project-info-tabs {
-    padding: 2px 2px 15px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-top-right-radius: 0.25em;
+    border-bottom-right-radius: 0.25em;
+    padding: 2px;
+    width: 43px;
 }
 
 .project-info-content {
+    width: 100%;
+    height: 100%;
+    min-height: 370px;
+    padding: 5px;
+    position: relative;
+    border-right: 1px solid #bdbdbd;
 
 }
 
 .nav-pills > .nav-link {
     position: relative;
-    background-color: transparent;
-    color: #000 !important;
-    padding: 5px;
-    font-weight: 500;
-    margin: 1px 0 7px 0;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-}
-.nav-pills > .nav-link:first-child {
-    padding-right: 0;
+    background-color: #707070;
+    color: #fff;
+    padding: 5px 2px;
+    margin: 1px 2px 1px 0;
+    border-radius: 0 0.25em 0.25em 0;
+    width: 40px;
+    height: 90px;
 }
 
-.nav-pills > .nav-link.active {
-    font-weight: 500;
-    background-color: transparent;
-    color: #3ccd1c !important;
-    border-bottom: 1px solid #3ccd1c;
+.nav-pills > .nav-link.active, .nav-pills > .nav-link:hover {
+    background-color: #3CCD1C;
+    color: #fff;
     cursor: pointer;
 }
-.nav-pills > .nav-link:hover {
-    background-color: transparent;
-    color: #3ccd1c !important;
-    cursor: pointer;
+
+.nav-pills > .nav-link::after {
+    content: 'شاخص ها';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: max-content;
+    transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.nav-pills > .nav-link:first-child::after {
+    content: 'شاخص ها';
+}
+
+.nav-pills > .nav-link:nth-child(2)::after {
+    content: 'راهکارها';
+}
+
+.nav-pills > .nav-link:nth-child(3)::after {
+    content: 'منابع مورد نیاز';
+}
+
+.nav-pills > .nav-link:nth-child(4)::after {
+    content: 'قوانین';
 }
 
 .question-mark {
     height: 100%;
-    padding-left: 10px;
 }
 
 .question {
@@ -316,7 +338,7 @@ span.border-span {
     -webkit-border-radius: 0.25em;
     -moz-border-radius: 0.25em;
     border-radius: 0.25em;
-    border: 1px solid rgba(112, 112, 112, 0.03);
+    border: 1px solid #bdbdbd;
     padding: 2px 5px;
     background-color: #F8FDF7;
     color: #707070;
@@ -336,7 +358,7 @@ span.border-span {
 }
 
 .comment-body {
-    max-width: calc(80% - 60px);
+    width: calc(100% - 60px);
     position: relative;
     padding: 5px;
     bottom: 0;
@@ -358,11 +380,17 @@ span.border-span {
 }
 
 .my-comment > .comment-body {
+    left: 60px;
+}
+
+.your-comment > .comment-profile {
+    position: relative;
     left: 0;
+    bottom: 0;
 }
 
 .your-comment > .comment-body {
-    right: 0;
+    right: 60px;
 }
 
 .delete-comment {
