--- a/industry/templates/industry/layouts/showProject.html
+++ b/industry/templates/industry/layouts/showProject.html
@@ -13,77 +13,81 @@
             <div class="row mbottom-lg-30">
                 <div class="col-lg-6 techniques"></div>
                 <div class="col-lg-6">
-                    <div class="establish-time">
+                    <div class="establish-time col-6">
                         <span class="time-head">ثبت</span>
-                        <div class="time-body">22/12/1398</div>
+                        <div class="time-body">تاریخ ثبت</div>
                     </div>
-                    <div class="time-left">
+                    <div class="time-left col-6">
                         <span class="time-head">مهلت</span>
-                        <div class="time-body">2 ماه</div>
+                        <div class="time-body">مهلت</div>
                     </div>
                 </div>
             </div>
             <div class="row mbottom-lg-25">
                 <div class="col-lg-12 text-right">
-                    <div class="project-info-innerDiv">
-                        <div class="project-info-tabs">
-                            <div class="nav nav-pills" id="v-pills-tab" role="tablist"
-                                 aria-orientation="vertical">
-                                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" role="tab"
-                                   aria-controls="v-pills-home" aria-selected="true">
-                                    شاخص ها
-                                </a>
-                                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" role="tab"
-                                   aria-controls="v-pills-profile" aria-selected="false">
-                                    راهکارها
-                                </a>
-                                <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" role="tab"
-                                   aria-controls="v-pills-messages" aria-selected="false">
-                                    منابع مورد نیاز
-                                </a>
-                                <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" role="tab"
-                                   aria-controls="v-pills-settings" aria-selected="false">
-                                    قوانین
-                                </a>
-                            </div>
-                        </div>
-                        <div class="project-info-content">
-                            <div>
-                                <div class="question">
-                                        <span class="question-mark">
-                                            <i class="far fa-question-circle"></i>
-                                        </span>
-                                    لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.
-                                </div>
-                                <div class="answer">
-                                    نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون
-                                    جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.
+                    <span class="section-title">اطلاعات پروژه</span>
+                    <div class="section">
+                        <div class="project-info-innerDiv">
+                            <div class="project-info-tabs">
+                                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                                     aria-orientation="vertical">
+                                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-home"
+                                       aria-selected="true"></a>
+                                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-profile"
+                                       aria-selected="false"></a>
+                                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-messages"
+                                       aria-selected="false"></a>
+                                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-settings"
+                                       aria-selected="false"></a>
                                 </div>
                             </div>
-                            <div>
-                                <div class="question">
-                                        <span class="question-mark">
-                                            <i class="far fa-question-circle"></i>
-                                        </span>
-                                    در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات
-                                    درمانی یا ... حاصل می شود؟
-                                </div>
-                                <div class="answer">
-                                    مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر
-                                    تولیدکننده این محصول شرکت THERMO FISHER میباشد. اگر کیفیت محصول تولیدی خوب باشد
-                                    میتواند جایگزین نمونه خارجی شود.
-                                </div>
-                            </div>
-                            <div>
-                                <div class="question">
-                                        <span class="question-mark">
-                                            <i class="far fa-question-circle"></i>
-                                        </span>
-                                    برآورد شما از سود مالی این پروژه چگونه است؟
-                                </div>
-                                <div class="answer">
-                                    براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
-                                </div>
+                            <div class="project-info-content">
+{#                                <div>#}
+{#                                    <div class="question">#}
+{#                                        <span class="question-mark">#}
+{#                                            <i class="far fa-question-circle"></i>#}
+{#                                        </span>#}
+{#                                        لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.#}
+{#                                    </div>#}
+{#                                    <div class="answer">#}
+{#                                        نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون#}
+{#                                        جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div>#}
+{#                                    <div class="question">#}
+{#                                        <span class="question-mark">#}
+{#                                            <i class="far fa-question-circle"></i>#}
+{#                                        </span>#}
+{#                                        در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات#}
+{#                                        درمانی یا ... حاصل می شود؟#}
+{#                                    </div>#}
+{#                                    <div class="answer">#}
+{#                                        مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر#}
+{#                                        تولیدکننده این محصول شرکت THERMO FISHER میباشد. اگر کیفیت محصول تولیدی خوب باشد#}
+{#                                        میتواند جایگزین نمونه خارجی شود.#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div>#}
+{#                                    <div class="question">#}
+{#                                        <span class="question-mark">#}
+{#                                            <i class="far fa-question-circle"></i>#}
+{#                                        </span>#}
+{#                                        برآورد شما از سود مالی این پروژه چگونه است؟#}
+{#                                    </div>#}
+{#                                    <div class="answer">#}
+{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+{#                                    </div>#}
+{#                                </div>#}
                             </div>
                         </div>
                     </div>
@@ -94,15 +98,15 @@
                     {% include 'industry/layouts/comment.html' %}
                 </div>
             </div>
-            <div class="card-footer">
-                <input type="text" name="add-comment" class="w-100">
-                <span class="send-comment">
-
-                </span>
-                <span class="attach-comment">
-
-                </span>
-            </div>
+{#            <div class="card-footer">#}
+{#                <input type="text" name="add-comment" class="w-100">#}
+{#                <span class="send-comment">#}
+{##}
+{#                </span>#}
+{#                <span class="attach-comment">#}
+{##}
+{#                </span>#}
+{#            </div>#}
         </div>
     </div>
 </div>
