Just Show Project

--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="preview-question">
         <div class="card info-card text-right">
-            <div class="card-header">سوال پژوهشی</div>
+            <div class="card-header">سوال پژوهشی{{question_title}}</div>
             <div class="inner-card">
                 {#                    <div class="row">#}
                 {#                        <div class="col-12">#}
