--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -11,26 +11,19 @@
         <div class="container">
             <div class="row">
                <div class="col-lg-12">
-                   <h6 class="project-title"> محلول کشت سلولی ( FBS )</h6>
+                   <h6 class="project-title"></h6>
                </div>
             </div>
             <div class="row mbottom-lg-30">
-                <div class="col-lg-6">
-                    <span class="border-span">محیط کشت سلولی </span>
-                    <span class="border-span">PCR</span>
-                    <span class="border-span">فلوسایتومتری</span>
-                    <span class="border-span">فلوسایتومتری</span>
-                    <span class="border-span">PCR</span>
-                    <span class="border-span">PCR</span>
-                </div>
+                <div class="col-lg-6 techniques"></div>
                 <div class="col-lg-6">
                     <div class="establish-time">
                         <div class="time-head">زمان ثبت</div>
-                        <div class="time-body">22/12/1398</div>
+                        <div class="time-body"></div>
                     </div>
                     <div class="time-left">
                         <div class="time-head">مهلت انجام</div>
-                        <div class="time-body">2 ماه</div>
+                        <div class="time-body"></div>
                     </div>
                 </div>
             </div>
@@ -48,48 +41,14 @@
                                     <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" role="tab" aria-controls="v-pills-settings" aria-selected="false"></a>
                                 </div>
                             </div>
-                            <div class="project-info-content">
-                                <div>
-                                    <div class="question">
-                                        <span class="question-mark">
-                                            <i class="far fa-question-circle"></i>
-                                        </span>
-                                        لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.
-                                    </div>
-                                    <div class="answer">
-                                        نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="question">
-                                        <span class="question-mark">
-                                            <i class="far fa-question-circle"></i>
-                                        </span>
-                                        در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟
-                                    </div>
-                                    <div class="answer">
-                                        مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر تولیدکننده این محصول شرکت THERMO FISHER میباشد. اگر کیفیت محصول تولیدی خوب باشد میتواند جایگزین نمونه خارجی شود.
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="question">
-                                        <span class="question-mark">
-                                            <i class="far fa-question-circle"></i>
-                                        </span>
-                                        برآورد شما از سود مالی این پروژه چگونه است؟
-                                    </div>
-                                    <div class="answer">
-                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
-                                    </div>
-                                </div>
-                            </div>
+                            <div class="project-info-content"></div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row mbottom-lg-25">
                 <div class="col-lg-9">
-                    <button class="w-100 accept-btn btn">ارسال  درخواست انجام پروژه</button>
+                    <button class="w-100 accept-btn btn"></button>
                 </div>
                 <div class="col-lg-3">
                     <button class="w-100 refuse-btn btn">رد پروژه</button>
