--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -151,7 +151,10 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="chamran_btn" style="left: 0;bottom: -1px">افزودن پروژه</button>
+                    <button type="submit" class="chamran_btn ch-form-submit">
+                        <i class="fas fa-check"></i>
+                        افزودن پروژه
+                    </button>
                 </form>
             </div>
         </div>
