some bugs fixed

--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button class="save-btn confirm_project" id="accept-project" data-url="{% url 'expert:accept_project' %}">
+                <button class="save-btn confirm_project" id="accept-project">
                     تایید و شروع پروژه
                 </button>
             </div>
