--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -48,10 +48,7 @@
             </div>
             <div class="row mbottom-lg-25">
                 <div class="col-lg-9">
-                    <button class="w-100 accept-btn btn"></button>
-                </div>
-                <div class="col-lg-3">
-                    <button class="w-100 refuse-btn btn">رد پروژه</button>
+                    <button class="w-100 accept-btn btn">ارسال  درخواست انجام پروژه</button>
                 </div>
             </div>
             <div class="row mbottom-lg-25">
