--- a/researcher/templates/researcher/layouts/comment.html
+++ b/researcher/templates/researcher/layouts/comment.html
@@ -4,14 +4,16 @@
                         <span class="title-back"></span>
                         <div class="project-comment-innerDiv">
                             <div class="add-comment">
-                                <form action="" method="post">
+                                <form method="POST" id="comment-form" enctype="multipart/form-data" url="{% url 'researcher:comment' %}">
+                                    {% csrf_token %}
+                                    <input type="text" name="project_id" id="project_id" hidden>
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <label for="comment">ثبت نظر جدید</label>
-                                            <textarea dir="rtl" id="comment" class="w-100 emojiable-option" name="" rows="5"></textarea>
-                                            <button class="chamran_btn" type="button" style="left: 16px;bottom: 8px;">ثبت نظر</button>
+                                            <textarea dir="rtl" id="comment" class="w-100 emojiable-option" name="description" rows="5"></textarea>                                            
+                                            <button class="chamran_btn" type="submit" style="left: 16px;bottom: 8px;">ثبت نظر</button>
                                             <span class="new-comment-tools">
-                                                <input type="file" id="comment-attach" hidden>
+                                                <input type="file" id="comment-attach" name="attachment" hidden>
                                                 <label for="comment-attach"><i class="fas fa-paperclip"></i></label>
                                             </span>
                                             <div class="attachment"></div>
