--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -24,9 +24,9 @@
             <div class="row">
                 {% for project in user.industryuser.projects.all %}
                     {% if project.status == 0 %}
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-6 col-md-6">
                             <div class="card project-card text-right">
-                                <div class="status-line check"></div>
+{#                                <div class="status-line check"></div>#}
                                 <h6> {{ project.project_form.project_title_persian }}</h6>
 {#                                <div class="project-progress">#}
 {#                                    <span>میزان پیشرفت</span>#}
@@ -122,9 +122,9 @@
                             </div>
                         </div>
                     {% elif project.status == 1 %}
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-6 col-md-6">
                             <div class="card project-card text-right">
-                                <div class="status-line active"></div>
+{#                                <div class="status-line active"></div>#}
                                 <h6><i class="fas fa-file-alt"></i> {{ project.project_form.project_title_persian }}
                                 </h6>
                                 <div class="employer"><i class="far fa-envelope"></i> پیام ها</div>
@@ -168,9 +168,9 @@
                             </div>
                         </div>
                     {% elif project.status == 2 %}
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-6 col-md-6">
                             <div class="card project-card text-right">
-                                <div class="status-line refuse"></div>
+{#                                <div class="status-line refuse"></div>#}
                                 <h6><i class="fas fa-file-alt"></i>
                                     {{ project.project_form.project_title_persian }}</h6>
                                 <div class="employer"><i class="far fa-envelope"></i> پیام ها</div>
@@ -191,9 +191,9 @@
                             </div>
                         </div>
                     {% elif project.status == 3 %}
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-6 col-md-6">
                             <div class="card project-card text-right">
-                                <div class="status-line"></div>
+{#                                <div class="status-line"></div>#}
                                 <h6><i class="fas fa-file-alt"></i>
                                     {{ project.project_form.project_title_persian }}</h6>
                                 <div class="employer"><i class="far fa-envelope"></i> پیام ها</div>
