working on select techniques

--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -3,7 +3,7 @@
 <div class="fixed-back showProject">
     <div class="card text-right">
         <div class="close"></div>
-        <div class="card-head"> محلول کشت سلولی ( FBS )</div>
+        <div class="card-head"></div>
         <div class="container">
             <div class="row mbottom-lg-30">
                 <div class="col-lg-6 techniques"></div>
@@ -11,11 +11,11 @@
                     <div class="row">
                         <div class="establish-time col-6">
                             <div class="time-head">زمان ثبت</div>
-                            <div class="time-body">22/12/1398</div>
+                            <div class="time-body"></div>
                         </div>
                         <div class="time-left col-6">
                             <div class="time-head">مهلت انجام</div>
-                            <div class="time-body">2 ماه</div>
+                            <div class="time-body"></div>
                         </div>
                     </div>
                 </div>
@@ -50,10 +50,7 @@
                                         </span>
                                         لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.
                                     </div>
-                                    <div class="answer">
-                                        نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون
-                                        جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.
-                                    </div>
+                                    <div class="answer"></div>
                                 </div>
                                 <div>
                                     <div class="question">
@@ -63,11 +60,7 @@
                                         در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات
                                         درمانی یا ... حاصل می شود؟
                                     </div>
-                                    <div class="answer">
-                                        مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر
-                                        تولیدکننده این محصول شرکت THERMO FISHER میباشد. اگر کیفیت محصول تولیدی خوب باشد
-                                        میتواند جایگزین نمونه خارجی شود.
-                                    </div>
+                                    <div class="answer"></div>
                                 </div>
                                 <div>
                                     <div class="question">
@@ -76,14 +69,7 @@
                                         </span>
                                         برآورد شما از سود مالی این پروژه چگونه است؟
                                     </div>
-                                    <div class="answer">
-                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
-                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
-                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
-                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
-                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
-                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.
-                                    </div>
+                                    <div class="answer"></div>
                                 </div>
                             </div>
                         </div>
