--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -8,7 +8,7 @@
 
 {% endblock %}
 
-{% block name %}دکتر احسان شریف{% endblock %}
+{% block name %}{{ request.user.expertuser.expertform }}{% endblock %}
 
 {% block dialog %}
     {% include 'expert/layouts/researcher_info_dialog.html' %}
@@ -18,41 +18,53 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card info-card user-info text-right">
-                <div class="card-header">محلول کشت سلولی</div>
+                {% if applications %}
+                    {% for p in applications %}
+                    <div class="card-header">{{ p.project }}</div>
                     <div class="inner-card card" style="margin-bottom: 0;">
+                        {% for r in p.researchers_requested %}
                         <div class="researcher-request-info-innerDiv">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="card researcher-info">
-                                        <img src="{% static 'expert/img/photo.jpg' %}" alt="researcher-profile">
+                                        <img src="{{ r.photo.url }}" alt="researcher-profile">
                                         <div class="researcher-info-innerDiv text-right">
-                                            <h6>علی جعفرزاده</h6>
-                                            <div>مهندسی کامپیوتر - نرم افزار</div>
-                                            <div>مقطع: <span> کارشناسی</span></div>
+                                            <h6>{{ r }}</h6>
+                                            <div>{{ r.major }} - {{ r.university }}</div>
+                                            <div>مقطع: <span> {% if r.grade == 1 %}
+                                                                کارشناسی
+                                                              {% elif r.grade == 2 %}
+                                                                کارشناسی ارشد
+                                                              {% elif r.grade == 3 %}
+                                                                دکتری
+                                                              {% elif r.grade == 4 %}
+                                                                دکتری عمومی
+                                                              {% endif %}</span></div>
                                             <div class="">
-                                                <span class="border-span">برنامه نویس Django </span>
-                                                <span class="border-span">python</span>
-                                                <span class="border-span">برنامه نویس BackEnd</span>
-                                                <span class="border-span">مسلط به Git</span>
-                                                <span class="border-span">مسلط به Finglish</span>
+                                            {% for t in r.get_techniques %}
+                                                <span class="border-span">t.technique.technique_title</span>
+                                            {% endfor %}
                                             </div>
                                         </div>
                                         <div class="researcher-score">
                                             <span>امتیاز: </span>
                                             <span>10/</span>
-                                            <span>4</span>
+                                            <span>r.points</span>
                                         </div>
 {#                                                   <button class="show-researcher">مشاهده</button>#}
 {#                                                   <button class="accept-researcher">تایید</button>#}
 {#                                                   <button class="refuse-researcher">رد</button>#}
-                                        <button class="researcher-card-button-show">مشاهده</button>
-                                        <button class="researcher-card-button-check">تایید</button>
+                                        <button class="researcher-card-button-show" id="{{ r.id }}" data-url="{% url 'expert:show_researcher_preview' %}">مشاهده</button>
+                                        <button class="researcher-card-button-check" id="{{ r.id }}">تایید</button>
                                         <div class="close"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
     </div>
