--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -11,7 +11,7 @@
         </div>
         <div class="container">
             <div class="row mbottom-lg-30">
-                <div class="col-lg-6 techniques"></div>
+                <div class="col-lg-6 keywords"></div>
                 <div class="col-lg-6">
                     <div class="establish-time col-6">
                         <span class="time-head">ثبت</span>
