--- a/researcher/templates/researcher/layouts/comment.html
+++ b/researcher/templates/researcher/layouts/comment.html
@@ -2,26 +2,26 @@
 <span class="section-title">نظرات</span>
 <div class="section">
     <div class="project-comment-innerDiv">
+            <div class="comments"></div>
+            <hr>
         <div class="add-comment">
             <form action="" method="post" enctype="multipart/form-data" id="comment-form" url="{% url 'researcher:comment' %}" > 
                 {% csrf_token %}
                 <input type="text" name="project_id" id="project_id" hidden>
+                <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
                 <div class="row">
                     <div class="col-lg-12">
-                        <label for="comment">ثبت نظر جدید</label>
-                        <textarea dir="rtl" id="description" class="w-100 emojiable-option" name="" rows="5"></textarea>
+                        <label for="description">ثبت نظر جدید</label>
+                        <textarea dir="rtl" id="description" class="w-100 emojiable-option" name="description" rows="5"></textarea>
                         <button class="chamran_btn" type="submit" style="left: 16px;bottom: 8px;">ثبت نظر</button>
                         <span class="new-comment-tools">
-                                                <input type="file" id="comment-attach" hidden>
+                                                <input type="file" id="comment-attach" name="attachment"hidden>
                                                 <label for="comment-attach"><i class="fas fa-paperclip"></i></label>
                                             </span>
                         <div class="attachment"></div>
                     </div>
                 </div>
             </form>
-            <hr>
-            <div class="comments">
-            </div>
         </div>
     </div>
 </div>
