resolve some bugs in index select techniques dialog

--- a/expert/templates/expert/layouts/select_techniques.html
+++ b/expert/templates/expert/layouts/select_techniques.html
@@ -20,6 +20,10 @@
                     <div class="section">
                         <div id="fancy-tree"></div>
                     </div>
+{#                    <div class="">#}
+{#                        <label for="add-new-technique">تکنیک جدید</label>#}
+{#                        <input type="text" class="w-100" name="" id="add-new-technique">#}
+{#                    </div>#}
                 </div>
                 <div class="col-4 text-right">
                     <span class="section-title">تکنیک های انتخاب شده</span>
