--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -7,7 +7,7 @@
 
 {% block dialog %}
     {% include 'expert/layouts/initial_information.html' %}
-{#    {% include 'expert/layouts/project_details.html' %}#}
+    {#    {% include 'expert/layouts/project_details.html' %}#}
     {% include 'expert/layouts/showProject.html' %}
     {% include 'expert/layouts/vote_dialog_industry.html' %}
     {% include 'expert/layouts/vote_dialog_researcher.html' %}
@@ -30,60 +30,84 @@
                         </ul>
                         <div class="tab-content">
                             {% for p in projects %}
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="card project-item">
-{#                                            {% if forloop.counter0 == 0 %}#}
-{#                                                <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>#}
-{#                                            {% endif %}#}
-                                            <span class="header">{{ p.project_form.project_title_persian }} <span
-                                                    class="sub-header"> ( {% calculate_date_past p.date_submitted_by_industry %} قبل ) </span></span>
-                                            <span><i class="far fa-envelope"></i> پیام ها </span>
-                                            <span><i
-                                                    class="fas fa-dollar-sign"></i><span>{{ p.project_form.required_budget }}</span> ریال </span>
-                                            <span><i
-                                                    class="fas fa-hourglass-end"></i><span>{% calculate_date_remaining p.date_finished %}</span> تا اتمام پروژه</span>
-                                            <button type="button" class="chamran-btn-info" id="{{ p.id }}"
-                                                    data-url="{% url 'expert:show_project' %}">مشاهده
+                                <div class="card active-question flow-root-display">
+                                    <div class="question-title w-50">
+                                        <span class="header">
+                                            {{ p.project_form.project_title_persian }}
+                                            <span class="sub-header">
+                                                ( {% calculate_date_past p.date_submitted_by_industry %} قبل )
+                                            </span>
+                                        </span>
+                                    </div>
+                                    <div class="question-info w-50">
+                                        <div class="date w-25">
+                                            <span>{% calculate_date_remaining p.date_finished %}</span> تا اتمام پروژه
+                                        </div>
+                                        <div class="answers w-25"><i class="far fa-comments fa-lg"><span
+                                                class="num"></span></i></div>
+                                        <div class="status w-25"><span>{{ p.project_form.required_budget }}</span> ریال
+                                        </div>
+                                        <div class="show w-25">
+                                            <button class="default-btn show-btn preview-project" id="{{ p.id }}" data-url="{% url 'expert:show_project' %}">
+                                                مشاهده
                                             </button>
-                                            <button type="button" class="chamran-btn-delete">رد</button>
                                         </div>
                                     </div>
                                 </div>
-{#                                <div class="card active-question flow-root-display">#}
-{#                                    <div class="question-title w-50">#}
-{#                                        <span class="header">#}
-{#                                            {{ p.project_form.project_title_persian }}#}
-{#                                            <span class="sub-header"> ( {% calculate_date_past p.date_submitted_by_industry %} قبل ) </span>#}
-{#                                        </span>#}
-{#                                    </div>#}
-{#                                    <div class="question-info w-50">#}
-{#                                        <div class="date w-25">#}
-{#                                            <span>#}
-{#                                                <i class="fas fa-hourglass-end"></i>#}
-{#                                                <span>{% calculate_date_remaining p.date_finished %}</span>#}
-{#                                                تا اتمام پروژه#}
-{#                                            </span>#}
-{#                                        </div>#}
-{#                                        <div class="answers w-25">#}
-{#                                            <i class="far fa-envelope">#}
-{#                                                <span class="num">5</span>#}
-{#                                            </i>#}
-{#                                            پیام ها#}
-{#                                        </div>#}
-{#                                        <div class="status w-25">#}
-{#                                            <span>#}
-{#                                                <i class="fas fa-dollar-sign"></i>#}
-{#                                                <span>{{ p.cost_of_project }}</span>#}
-{#                                                ریال#}
-{#                                            </span>#}
-{#                                        </div>#}
-{#                                        <div class="show w-25">#}
-{#                                            <button class="default-btn show-btn chamran-btn-info" id="{{ p.id }}"#}
-{#                                                    data-url="{% url 'expert:show_project' %}">مشاهده</button>#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                </div>#}
+                                {#                                <div class="row">#}
+                                {#                                    <div class="col-lg-12">#}
+                                {#                                        <div class="card project-item">#}
+                                {#                                            {% if forloop.counter0 == 0 %}#}
+                                {#                                                <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>#}
+                                {#                                            {% endif %}#}
+                                {#                                            <span class="header">{{ p.project_form.project_title_persian }} <span#}
+                                {#                                                    class="sub-header"> ( {% calculate_date_past p.date_submitted_by_industry %} قبل ) </span></span>#}
+                                {#                                            <span><i class="far fa-envelope"></i> پیام ها </span>#}
+                                {#                                            <span><i#}
+                                {#                                                    class="fas fa-dollar-sign"></i><span>{{ p.project_form.required_budget }}</span> ریال </span>#}
+                                {#                                            <span><i#}
+                                {#                                                    class="fas fa-hourglass-end"></i><span>{% calculate_date_remaining p.date_finished %}</span> تا اتمام پروژه</span>#}
+                                {#                                            <button type="button" class="chamran-btn-info" id="{{ p.id }}"#}
+                                {#                                                    data-url="{% url 'expert:show_project' %}">مشاهده#}
+                                {#                                            </button>#}
+                                {#                                            <button type="button" class="chamran-btn-delete">رد</button>#}
+                                {#                                        </div>#}
+                                {#                                    </div>#}
+                                {#                                </div>#}
+                                {#                                <div class="card active-question flow-root-display">#}
+                                {#                                    <div class="question-title w-50">#}
+                                {#                                        <span class="header">#}
+                                {#                                            {{ p.project_form.project_title_persian }}#}
+                                {#                                            <span class="sub-header"> ( {% calculate_date_past p.date_submitted_by_industry %} قبل ) </span>#}
+                                {#                                        </span>#}
+                                {#                                    </div>#}
+                                {#                                    <div class="question-info w-50">#}
+                                {#                                        <div class="date w-25">#}
+                                {#                                            <span>#}
+                                {#                                                <i class="fas fa-hourglass-end"></i>#}
+                                {#                                                <span>{% calculate_date_remaining p.date_finished %}</span>#}
+                                {#                                                تا اتمام پروژه#}
+                                {#                                            </span>#}
+                                {#                                        </div>#}
+                                {#                                        <div class="answers w-25">#}
+                                {#                                            <i class="far fa-envelope">#}
+                                {#                                                <span class="num">5</span>#}
+                                {#                                            </i>#}
+                                {#                                            پیام ها#}
+                                {#                                        </div>#}
+                                {#                                        <div class="status w-25">#}
+                                {#                                            <span>#}
+                                {#                                                <i class="fas fa-dollar-sign"></i>#}
+                                {#                                                <span>{{ p.cost_of_project }}</span>#}
+                                {#                                                ریال#}
+                                {#                                            </span>#}
+                                {#                                        </div>#}
+                                {#                                        <div class="show w-25">#}
+                                {#                                            <button class="default-btn show-btn chamran-btn-info" id="{{ p.id }}"#}
+                                {#                                                    data-url="{% url 'expert:show_project' %}">مشاهده</button>#}
+                                {#                                        </div>#}
+                                {#                                    </div>#}
+                                {#                                </div>#}
                             {% endfor %}
                         </div>
                     </div>
